@@ -1141,6 +1141,7 @@ public class View extends JFrame implements EBComponent
 	//{{{ close() method
 	void close()
 	{
+		GUIUtilities.saveGeometry(this,plainView ? "plain-view" : "view");
 		closed = true;
 
 		// save dockable window geometry, and close 'em
@@ -1560,6 +1561,15 @@ public class View extends JFrame implements EBComponent
 
 		public ViewConfig()
 		{
+		}
+
+		public ViewConfig(boolean plainView)
+		{
+			String prefix = (plainView ? "plain-view" : "view");
+			x = jEdit.getIntegerProperty(prefix + ".x",0);
+			y = jEdit.getIntegerProperty(prefix + ".y",0);
+			width = jEdit.getIntegerProperty(prefix + ".width",0);
+			height = jEdit.getIntegerProperty(prefix + ".height",0);
 		}
 
 		public ViewConfig(boolean plainView, String splitConfig,
